# malva_client

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: Makefile  about.rst  conf.py  index.rst  installation.rst  make_docs.sh  query_parameters.rst  quickstart.rst  requirements.txt
docs/api/: malva_client.auth.rst  malva_client.cli.rst  malva_client.client.rst  malva_client.config.rst  malva_client.exceptions.rst  malva_client.models.rst  malva_client.rst  malva_client.storage.rst  malva_client.tools.rst  modules.rst
docs/examples/: advanced_usage.rst  basic_usage.rst  index.rst
docs/tutorials/: 00_setup_malva_client.ipynb  01_expression_analysis.ipynb  02_querying_covid.ipynb  03_projecting_to_cells.ipynb  04_coexpression_analysis.ipynb  05_cell_projection.ipynb  index.rst
examples/: 00_setup_malva_client.ipynb  01_expression_analysis.ipynb  02_coverage_analysis.ipynb  02_querying_covid.ipynb  03_projecting_to_cells.ipynb  04_coexpression_analysis.ipynb  05_cell_projection.ipynb  basic_usage.ipynb  rna.fna
examples/circrna/: querying_circrna.ipynb
examples/viruses/: querying_viruses.ipynb
examples/viruses/sequences/: covid.fa  dengue.fa  hepC.fa  hiv1.fa  humanRV.fa  measles.fa  westnile.fa  zika.fa
malva_client/: __init__.py  auth.py  cli.py  client.py  config.py  exceptions.py  models.py  storage.py  tools.py
tests/: conftest.py  test_client.py  test_config.py  test_exceptions.py  test_models.py  test_storage.py
