[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "malva_client"
version = "0.2.0"
description = "Python client for Malva Index"
readme = "README.md"
license = "BSD-3-Clause-Clear"
requires-python = ">=3.8"
authors = [
    {name = "Daniel León-Periñán", email = "daniel.leonperinan@mdc-berlin.de"},
    {name = "Nikos Karaiskos", email = "nikolaos.karaiskos@mdc-berlin.de"},
]
maintainers = [
    {name = "Daniel León-Periñán", email = "daniel.leonperinan@mdc-berlin.de"},
    {name = "Nikos Karaiskos", email = "nikolaos.karaiskos@mdc-berlin.de"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "requests>=2.25.0",
    "pandas>=1.0",
    "click>=8.0.0",
    "rich>=13.0",
    "pydantic>=1.8.0",
    "keyring>=23.0.0",
    "tqdm>=4.60.0",
    "gprofiler-official>=1.0.0",
    "matplotlib>=3.5.0",
    "anndata>=0.8.0",
    "seaborn>=0.12.0",
    "dnaio>=1.2.3",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-click>=5.0",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
    "sphinx-design>=0.5",
    "nbsphinx>=0.9",
    "pandoc",
    "ipykernel",
]

[project.urls]
Documentation = "https://malva-client.readthedocs.io"
Source = "https://github.com/malva-bio/malva_client"
Homepage = "https://malva.bio"

[project.scripts]
malva_client = "malva_client.cli:main"

[tool.coverage.run]
source = ["malva_client"]
parallel = true
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise Import.*"
]

[tool.coverage.html]
directory = "htmlcov"
